Update to fix navbutton alignment issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,10 @@ ol, ul {
     list-style: none;
 }
 
+.navbar-handler.hidden-desktop {
+    padding: 10px;
+}
+
 #map-canvas.fill > img {
     max-width: none;
 }
